@@ -1,3 +1,8 @@
+2008-06-06  Ankit Jain  <jankit@novell.com>
+
+	* MonoDevelop.Ide.Gui.Dialogs/EncapsulateFieldDialog.cs: More usability
+	fixes.
+
 2008-06-05  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Ide.Gui/MonoDevelopTreeView.cs: Fix potential issue with
